--- a/drain3.ini
+++ b/drain3.ini
@@ -8,8 +8,8 @@ masking = [{"regex_pattern":"((?<=[^A-Za-z0-9])|^)'([a-zA-Z-0-9./]+(=[a-zA-Z-0-9
 	   {"regex_pattern":"((?<=[^A-Za-z0-9])|^)(\\w{8}-\\w{4}-\\w{4}-\\w{4}-\\w{12})((?=[^A-Za-z0-9])|$)","mask_with":"TKN"},
 	   {"regex_pattern":"((?<=[^A-Za-z0-9])|^)\\w+]?://(?:[a-zA-Z]|[0-9]|[$-_@.&+]|[!*\\(\\),]|(?:[0-9a-fA-F][0-9a-fA-F]))+((?=[^A-Za-z0-9])|$)", "mask_with": "URL"},
 	   {"regex_pattern":"((?<=[^A-Za-z0-9])|^)((: ?)(\\S+@\\S+))((?=[^A-Za-z0-9])|$)", "mask_with": "SEQ"},
-	   #{"regex_pattern":"((?<=[^A-Za-z0-9])|^)(0x[a-f0-9A-F]+)((?=[^A-Za-z0-9])|$)", "mask_with": "HEX"},
-       {"regex_pattern":"((?<=[^A-Za-z0-9])|^)'([\\-\\+]?\\d+)'((?=[^A-Za-z0-9])|$)", "mask_with": "NUM"},
+	   #{"regex_pattern":"((?<=[^A-Za-z0-9])|^)(0x[a-f0-9A-F]+)((?=[^A-Za-z0-9])|$)", "mask_with": "HEX"}
+	   {"regex_pattern":"((?<=[^A-Za-z0-9])|^)'([\\-\\+]?\\d+)'((?=[^A-Za-z0-9])|$)", "mask_with": "NUM"},
 	   {"regex_pattern":"((?<=[^A-Za-z0-9])|^)('[A-Za-z\\s]+')((?=[^A-Za-z0-9])|$)","mask_with":"TSK"} 
     	   #{"regex_pattern":"((?<=[^A-Za-z0-9])|^)((: ?)([A-Za-z]+\\s(\\w+ ?)+))((?=[^A-Za-z0-9])|$)", "mask_with": "SEQ"}
 	]
